[package]
name = "cellulose"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
cel-interpreter = "0.8.1"
clap = { version = "4.5.16", features = ["derive", "env", "cargo"] }
eyre = "0.6.12"
jwt-simple = { version = "0.12.9", features = ["superboring"], default-features = false }
jwt-simple-jwks = "0.3.0"
parking_lot = "0.12.3"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
tokio-listener = { version = "0.4.3", features = ["axum07", "clap", "multi-listener", "sd_listen"] }
tokio-retry = "0.3.0"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
